# sp500_uptrend_scanner

./: .gitignore  README.md  pyproject.toml
.github/workflows/: holdings.yml
scanner/: scan.py  uptrend.csv
scanner/data/input/: nasdaq_screener_1774022806014.csv
scanner/data/prices/raw/: A.csv  AAPL.csv  ABBV.csv  ABNB.csv  ABT.csv  ACGL.csv  ACN.csv  ADBE.csv  ADI.csv  ADM.csv  ADP.csv  ADSK.csv  AEE.csv  AEP.csv  AES.csv  AFL.csv  AIG.csv  AIZ.csv  AJG.csv  AKAM.csv  ALB.csv  ALGN.csv  ALL.csv  ALLE.csv  AMAT.csv  AMCR.csv  AMD.csv  AME.csv  AMGN.csv  AMP.csv  AMT.csv  AMZN.csv  ANET.csv  AON.csv  AOS.csv  APA.csv  APD.csv  APH.csv  APO.csv  APP.csv  (+467 more)
scanner/data/universe/: fetch_ivv_holdings.py  holdings.py  holdings_2026-06-12.xlsx  holdings_2026-07-02.xlsx  holdings_2026-07-09.xlsx  sp500_current.csv
tests/: test_fetch_ivv_holdings.py
