[project]
name = "trading-and-investing"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "massive>=2.8.0",
    "numpy>=2.4.2",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "python-dotenv>=1.2.2",
    "tqdm>=4.67.3",
]

[project.optional-dependencies]
full = [
    "ib-insync>=0.9.86",
    "ta-lib>=0.6.8",
]